--- a/2.html
+++ b/2.html
@@ -1,7 +1,7 @@
 <script>
     class tv{
         constructor(){
-            console.log("this is constructor");
+            console.log("this is constructor");//add
             this.channel="tv9marathi"
         }
         volume(){
